--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: rgb(39, 39, 102);
 }
 .navbar .max-width{
     display: flex;
